# CHIME-2

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Procfile  README.md  README.rst  app.json  autoapp.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  tox.ini  webpack.config.js
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  dash_issue.md  flask.md
.github/workflows/: labeler.yml
app/: __init__.py  blueprints.py  config.py  extension.py  settings.py  util.py
app/auth/: __init__.py  form.py  user.py
app/dashboard/: __init__.py  _config.py  callback.py  customization.py  factory.py  page.py  util.py
app/dashboard/component/: __init__.py  header.py  navbar.py  parameter.py  upload.py
app/dashboard/service/: __init__.py  upload.py
app/dashboard/tab/: __init__.py  census.py  parameter.py  report.py  upload.py
app/dashboard/templates/: dash.html
app/homepage/: __init__.py  index.py
app/homepage/templates/: contributors.html  home.html
app/models/: _base.py  base.py  models.py  user.py
app/public/: views.py
app/templates/: 401.html  404.html  footer.html  nav.html
app/user/: models.py  profile.py
assets/css/: style.css
assets/js/: main.js
chime.old/e2e/: package-lock.json
chime.old/src/chime_dash/: __init__.py
chime.old/src/penn_chime/: cli.py  constants.py  utils.py
chime.old/src/penn_chime/model/: parameters.py  ppe.py  sir.py
chime.old/src/penn_chime/model/validators/: base.py  validators.py
chime.old/src/penn_chime/view/: charts.py  spreadsheet.py  st_app.py  st_display.py
chime.old/tests/: conftest.py
chime.old/tests/penn_chime/: test_cli.py
chime.old/tests/penn_chime/model/: test_sir.py
chime.old/tests/penn_chime/view/: test_charts.py  test_st_display.py
chime.old/toplevel/: setup.py  st_app.py
chime2/: .gitignore  README.rst  Untitled1.ipynb  __init__.py  _config.py  bayeschime_xval.py  data-schema.json  pyproject.toml
chime2/chime2/: __init__.py  _config.py  _typing.py  api.py  fitting.py  plotting.py  util.py
chime2/chime2/bayes/: mcmc.py
chime2/chime2/model/: _base.py  sir.py  util.py
chime2/chime2/models/: __init__.py  base.py  seir.py  sir.py
chime2/chime2/network/: hospital.py
chime2/chime2/normal/: __init__.py  _base.py
chime2/chime2/pathogen/: viral.py
chime2/chime2/util/: distrubtion.py  io.py  model.py  timeseries.py
chime2/chime2/validation/: bayeschime_xval.py
chime2/docs/: conf.py  index.rst
chime2/parameter/: _base.py
chime2/tests/: __init__.py
chime2/tests/normal/models/: seir_test.py  sir_test.py
dkr/: Dockerfile  docker-compose.yml
doc/: conf.py  index.rst
doc/developers/: application_development.rst  contributing.rst  index.rst
etc/: model-parameters.json
migrations/versions/: 86748964abd5_.py
notebooks/: How-to-use-normal-approximations-module.ipynb
requirements/: dev.txt  prod.txt
src/: app.py  database.py
src/api/: chime2.py
src/api/app/: __init__.py
src/api/app/main/dashboard/: __init__.py
src/api/app/main/dto/: __init__.py  user.py
src/api/app/main/model/: blacklist.py
src/api/app/main/route/: __init__.py  user.py
src/api/app/main/service/: user.py
src/api/app/test/: base.py  test_config.py
src/api/etc/: app.toml  user.toml
src/bayes_chime/: sim.py  util.py
src/bayes_chime/_parameter/: parameters.py
src/bayes_chime/model/: base.py  seir.py  sir.py
src/chime2/: __init__.py  chime2.py
src/chime2-web/: chime2.py
src/chime2-web/app/: _config.py  _typing.py  assets.py  config.py
src/chime2-web/app/dashboard/: __init__.py
src/chime2-web/app/main/: __init__.py  extensions.py
src/chime2-web/app/server/: __init__.py
src/chime2-web/app/test/: test_auth.py  test_user_model.py
src/chime2-web/assets/: penn-medicine-header.css
src/chime2/app/: config.py
src/chime2/app/dashboard/: __init__.py
src/chime2/app/server/: extensions.py
src/chime2/bayes_chime/: sim.py
src/chime2/bayes_chime/_parameter/: parameters.py
src/chime2/bayes_chime/model/: _base.py  compartment.py  seir.py  sir.py
src/dashboard/: __init__.py  page.py
src/dashboard/component/: __init__.py  header.py  intro.py  menu.py  navbar.py  visualizations.py
src/dashboard/pages/: __init__.py  sidebar.py
src/dashboard/services/: callbacks.py
src/dashboard/utils/: callbacks.py
src/public/: forms.py  views.py
src/templates/: footer.html  layout.html  nav.html
src/templates/public/: about.html  contributors.html  home.html
src/templates/users/: members.html
src/user/: models.py
src/web/: Procfile  README.rst  __init__.py  _config.py  pyproject.toml
src/web/assets/: app.css
src/web/dashboard/: __init__.py  callback.py  page.py
src/web/dashboard/component/: header.py  navbar.py  parameter.py  upload.py
src/web/dashboard/tab/: __init__.py  census.py  parameter.py  upload.py
src/web/migrations/versions/: c805e5944509_init.py
src/web/server/: __init__.py  extension.py  webapp.py
src/web/server/model/: user.py
src/web/templates/: base.html  index.html
test/: conftest.py  factories.py  test_forms.py  test_functional.py  test_models.py
test/_parameter/: parameters.py
tests/: conftest.py  factories.py  test_functional.py  test_models.py
web/: Procfile  README.rst  app.json  package.json  pyproject.toml
web/app/: blueprints.py  commands.py  config.py  extension.py  util.py
web/app/dashboard/: __init__.py  factory.py
web/app/dashboard/component/: __init__.py  parameter.py
web/app/dashboard/service/: upload.py
web/app/dashboard/tab/: __init__.py
web/app/homepage/templates/: contributors.html  home.html
web/app/models/: __init__.py  base.py
web/app/templates/: 404.html
web/assets/css/: penn-medicine-header.css
web/assets/js/: main.js
web/dkr/: Dockerfile  docker-compose.yml
web/etc/: gunicorn.conf  model-parameters.json
web/requirements/: prod.txt
web/test/: settings.py  test_forms.py  test_functional.py  test_models.py
(+31 files in other folders)
