[tool.poetry]
name = "chime2"
version = "2.0.dev0"
description = "Web dashboard serving the latest CHIME simulations developed by the Predictive Healthcare team aPenn"
authors = ["Code For Philly <chime-devs@codeforphilly.org>, Predictive Healthcare @ Penn Medicine <name@domain.com>, Christopher Koerber <name@domain.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6.9"
wemake-python-styleguide = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.1"
hypothesis = "^5.14.0"
isort = "^4.3.21"
mypy = "^0.770"
pre-commit = "^2.4.0"
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
pytest-randomly = "^3.3.1"
sphinx = "^3.0.3"
tox = "^3.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
