[tool.poetry]
name = "ds-tracker"
version = "0.1.0"
description = "Improved student leadership workflow using flask"
authors = ["Brian Thomas Ross <ml@brianthomasross.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6.9"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
sqlalchemy = "^1.3.18"
psycopg2-binary = "^2.8.5"
flask-migrate = "^2.5.3"
flask-wtf = "^0.14.3"
email-validator = "^1.1.1"
wtforms = "^2.3.1"
gunicorn = "^20.0.4"
supervisor = "^4.2.0"
gevent = "^20.6.2"
flask-static-digest = "^0.1.3"
flask-login = "^0.5.0"
flask-bcrypt = "^0.7.1"
flask-caching = "^1.9.0"
flask-debugtoolbar = "^0.11.0"
environs = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "5.4.3"
WebTest = "2.0.35"
factory-boy = "2.12.0"
pdbpp = "0.10.2"
black = "19.10b0"
flake8 = "3.8.3"
flake8-blind-except = "0.1.1"
flake8-debugger = "3.2.1"
flake8-docstrings = "1.5.0"
flake8-isort = "3.0.0"
isort = "5.1.0"
pep8-naming = "0.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
