[bumpversion]
current_version = 2.0.0
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'


[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=
ignore_missing_imports=true

[tool:pytest]
testpaths=test/