[tool.poetry]
name = "chime2"
version = "0.1.0"
description = ""
authors = ["Brian Thomas Ross <ml@brianthomasross.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6.9"
pandas = "^1.0.5"
numpy = "^1.19.1"
gvar = "^11.7"
lsqfit = "^11.6"


[tool.poetry.dev-dependencies]
pytest = "5.4.3"
WebTest = "2.0.35"
factory-boy = "2.12.0"
pdbpp = "0.10.2"
black = "19.10b0"
flake8 = "3.8.3"
flake8-blind-except = "0.1.1"
flake8-debugger = "3.2.1"
flake8-docstrings = "1.5.0"
flake8-isort = "3.0.0"
isort = "4.3.21"
pep8-naming = "0.11.1"
pre-commit = "^2.6.0"
hypothesis = "^5.23.3"
mypy = "^0.782"
pytest-cov = "^2.10.0"
pytest-randomly = "^3.4.1"
sphinx = "^3.1.2"
tox = "^3.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
