[tool.poetry]
name = "chime2"
version = "0.1.0"
description = "Covid-19 Hospital Impact Model for Epidemics 2"
authors = ["PredictiveHealthcare@PennMedicine", "Christopher Koerber", "Brian Thomas Ross <ml@brianthomasross.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.9"
seaborn = "^0.10.1"
pandas = "^1.1.0"
gvar = "^11.7"
lsqfit = "^11.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
