[tool.poetry]
name = "chime-2-web"
version = "0.1.0"
description = ""
authors = ["Brian Thomas Ross <ml@brianthomasross.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "1.1.2"
Werkzeug = "1.0.1"
click = "^7.0"
Flask-SQLAlchemy = "2.4.4"
SQLAlchemy = "1.3.18"
psycopg2-binary = "2.8.5"
Flask-Migrate = "2.5.3"
email-validator = "1.1.1"
Flask-WTF = "0.14.3"
WTForms = "2.3.1"
gevent = "20.6.2"
gunicorn = "^19.9.0"
supervisor = "4.2.0"
Flask-Static-Digest = "0.1.3"
Flask-Login = "0.5.0"
Flask-Bcrypt = "0.7.1"
Flask-Caching = "1.7.2"
Flask-DebugToolbar = "0.11.0"
environs = "8.0.0"
dash = "^1.13.4"
dash-bootstrap-components = "^0.10.3"
pandas = "^1.0.5"
dash-table = "4.8.1"

[tool.poetry.dev-dependencies]
pytest = "5.4.3"
WebTest = "2.0.35"
factory-boy = "2.12.0"
pdbpp = "0.10.2"
black = "19.10b0"
flake8 = "3.8.3"
flake8-blind-except = "0.1.1"
flake8-debugger = "3.2.1"
flake8-docstrings = "1.5.0"
flake8-isort = "3.0.0"
isort = "4.3.21"
pep8-naming = "0.11.1"
pre-commit = "^2.6.0"
hypothesis = "^5.23.3"
mypy = "^0.782"
pytest-cov = "^2.10.0"
pytest-randomly = "^3.4.1"
sphinx = "^3.1.2"
tox = "^3.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
