[tool.poetry]
name = "dash_on_flask"
version = "0.1.0"
description = ""
authors = ["Brian Thomas Ross <ml@brianthomasross.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
pandas = "^1.0.5"
pandas-datareader = "^0.8.1"
dash = "^1.13.4"
flask = "^1.1.2"
flask-login = "^0.5.0"
flask-migrate = "^2.5.3"
flask-sqlalchemy = "^2.4.3"
flask-wtf = "^0.14.3"
dash-core-components = "^1.10.1"
dash-html-components = "^1.0.3"
dash-bootstrap-components = "^0.10.3"
toml = "^0.10.1"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
